# manipulation_project

get_cube_pose/: CMakeLists.txt
get_cube_pose/launch/: get_pose_client.launch.py
get_cube_pose/src/: get_pose_client.cpp
moveit2_scripts/: CMakeLists.txt
moveit2_scripts/launch/: pick_and_place.launch.py  pick_and_place_perception.launch.py
moveit2_scripts/src/: cartesian_path.cpp  pick_and_place copy.cpp  pick_and_place.cpp  pick_and_place_perception copy 1.cpp  pick_and_place_perception copy 2.cpp  pick_and_place_perception copy.cpp  pick_and_place_perception.cpp
my_moveit_config/: .setup_assistant  package.xml
my_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  name.srdf
real_moveit_config/: .setup_assistant  package.xml
real_moveit_config/config/: kinematics.yaml  moveit_controllers.yaml  name.srdf  ros2_controllers.yaml
real_moveit_config/launch/: move_group.launch.py
